2 poprawki w parsowaniu formatowania wiadomosci - wazne dla bezpieczenstwa
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3617 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -185,6 +185,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿liwo¶æ przypisania akcji do konkretnej grupy pól dokuj±cych, przypisanie akcji
   specyficznych dla okna chat do odpowiedniej grupy (adrian)
 * opcja ignorowania formatowania tekstu i obrazków od anonimów, domy¶lnie w³±czona (adrian)
+* poprawione 2 b³êdy w parsowaniu formatowania tekstu i obrazków 
+  (1 z nich, doprowadzaj±cy do segfaulta i wycieku du¿ej ilo¶ci danych
+  zg³oszony zosta³ przez Micha³a Gizowskiego) - UWAGA: oba b³êdy maj± du¿e
+  znaczenie dla bezpieczeñstwa (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
