--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ lub rozbudowy. Postaæ (x/y) oznacza, ¿e x jest pomys³odawc± lub
 podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
-+++ wersja 0.4.3
++++ wersja 0.4.3 (30.11.2005)
 * opcja ignorowania formatowania tekstu i obrazków od anonimów, domy¶lnie w³±czona (adrian)
 * poprawione 2 b³êdy w parsowaniu formatowania tekstu i obrazków 
   (1 z nich, doprowadzaj±cy do segfaulta i wycieku du¿ej ilo¶ci danych
