--- a/ChangeLog
+++ b/ChangeLog
@@ -189,6 +189,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   (1 z nich, doprowadzaj±cy do segfaulta i wycieku du¿ej ilo¶ci danych
   zg³oszony zosta³ przez Micha³a Gizowskiego) - UWAGA: oba b³êdy maj± du¿e
   znaczenie dla bezpieczeñstwa (joi)
+* MacOSX: regulacja g³o¶no¶ci domy¶lnie wy³±czona (bo playsound jej nie obs³uguje),
+  domy¶lny katalog instalcji to Kadu.app, a nie kadu.app (joi) 
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
