macosx: kadu.app->Kadu.app; by default volume control is disabled
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3626 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,8 @@ podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
 +++ wersja 0.4.4
-
+* MacOSX: regulacja g³o¶no¶ci domy¶lnie wy³±czona (bo playsound jej nie obs³uguje),
+  domy¶lny katalog instalcji to Kadu.app, a nie kadu.app (joi) 
 
 +++ wersja 0.4.3 (30.11.2005)
 * opcja ignorowania formatowania tekstu i obrazków od anonimów, domy¶lnie w³±czona (adrian)
