mozliwosc wlaczenia/wylaczenia etykiety dla przycisku w toolbarze
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3632 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -194,6 +194,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany do autodownloadu modu³ iwait4u (joi)
 * w oknie "Wy¶lij SMS" przy wyborze "pustego" elementu w combie, w tym¿e combie
   nie pojawia siê nick losowego u¿ytkownika (joi)
+* to czy dla danego przycisku w pasku narzêdziowym pokazuje siê tekstowa etykieta
+  jest konfigurowalne (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
