--- a/ChangeLog
+++ b/ChangeLog
@@ -196,6 +196,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   nie pojawia siê nick losowego u¿ytkownika (joi)
 * to czy dla danego przycisku w pasku narzêdziowym pokazuje siê tekstowa etykieta
   jest konfigurowalne (adrian)
+* poprawione parsowanie linków - * mo¿e te¿ w nim wystêpowaæ (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
