refreshing of uin in internal structures after "apply" in config
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3637 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -197,6 +197,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * to czy dla danego przycisku w pasku narzêdziowym pokazuje siê tekstowa etykieta
   jest konfigurowalne (adrian)
 * poprawione parsowanie linków - * mo¿e te¿ w nim wystêpowaæ (joi)
+* próba za³o¿enia nowego profilu koñczy³a siê komunikatem "Brak numeru GG lub
+  has³a" - poprawione (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
