--- a/ChangeLog
+++ b/ChangeLog
@@ -200,6 +200,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * próba za³o¿enia nowego profilu koñczy³a siê komunikatem "Brak numeru GG lub
   has³a" - poprawione (joi)
 * poprawione importowanie i ³±czenie list kontaktów (joi)
+* usuniêty segfault przy usuwaniu ca³ej historii dla wybranego u¿ytkownika (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
