--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * MacOSX: regulacja g³o¶no¶ci domy¶lnie wy³±czona (bo playsound jej nie obs³uguje),
   domy¶lny katalog instalcji to Kadu.app, a nie kadu.app (joi) 
 * dodany do autodownloadu modu³ iwait4u (joi)
+* poprawki w skryptach buduj±cych gdy /bin/sh nie jest linkiem do basha
+  (np. w FreeBSD,PLD) (joi)
 
 +++ wersja 0.4.3 (30.11.2005)
 * opcja ignorowania formatowania tekstu i obrazków od anonimów, domy¶lnie w³±czona (adrian)
