--- a/ChangeLog
+++ b/ChangeLog
@@ -205,6 +205,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   (panel informacyjny, przycisk statusów, zak³adki grup) (joi)
 * po zablokowaniu kontaktu przestawiamy jego status na niedostêpny (joi)
 * kolejne poprawki w importowaniu / kasowaniu  listy kontaktów (joi)
+* poprawki w skryptach buduj±cych gdy /bin/sh nie jest linkiem do basha
+  (np. w FreeBSD,PLD) (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
