3 bugs in docking: refreshing of static/animated icon after status change removing controls on unloading docking module refreshing icon after "apply" in configuration
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3647 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -207,6 +207,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * kolejne poprawki w importowaniu / kasowaniu  listy kontaktów (joi)
 * poprawki w skryptach buduj±cych gdy /bin/sh nie jest linkiem do basha
   (np. w FreeBSD,PLD) (joi)
+* poprawiona aktualizacja opcji "Ikona nadej¶cia nowej wiadomo¶ci" po "zastosuj",
+  poprawione od¶wie¿anie ikonki w docku po zmianie statusu,
+  usuwanie kontrolki z okna konfiguracji przy wy³adowywaniu modu³u docking (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
