--- a/ChangeLog
+++ b/ChangeLog
@@ -213,6 +213,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione dodawanie anonima do listy kontaktów (joi)
 * poprawione od¶wie¿anie listy kontaktów po usunieñciu numeru gg z informacji
   o kontakcie (joi)
+* poprawione od¶wie¿anie listy kontaktów po odebraniu wiadomo¶ci (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
