restoring chat sizes / encryption states
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3653 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -214,6 +214,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione od¶wie¿anie listy kontaktów po usunieñciu numeru gg z informacji
   o kontakcie (joi)
 * poprawione od¶wie¿anie listy kontaktów po odebraniu wiadomo¶ci (joi)
+* zapamiêtywanie rozmiarów okien / stanu szyfrowania znowu dzia³a (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
