--- a/ChangeLog
+++ b/ChangeLog
@@ -220,6 +220,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   wszystkim przy ciemnej kolorystyce) (joi)
 * poprawki w od¶wie¿aniu chata / historii (np. znikaj±ce separatory) (joi)
 * poprawiony segfault gdy okno historii uruchamiane jest przy pomocy skrotu (pawel_p)
+* w katalogu modules make install_nazwa_modulu instaluje tylko ten wybrany modu³ (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
