refreshing of userbox after setting/resetting phone number
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3665 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -230,6 +230,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   zmodyfikowaæ tak¿e version.m4 i przebudowaæ configure (./admin/configure-gen) (joi)
 * nowa opcja configure "--enable-final" przyspieszaj±ca oko³o dwukrotnie kompilacjê,
   ale wymagaj±ca du¿o pamiêci i nieprzydatna dla developerów (joi)
+* poprawione od¶wie¿anie listy kontaktów po dopisaniu komórki do danych o kontakcie,
+  poprawki w obs³udze kontaktów bez numeru gg i komórki (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
