akcja chat, toolbary w oknie search
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3670 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -232,6 +232,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ale wymagaj±ca du¿o pamiêci i nieprzydatna dla developerów (joi)
 * poprawione od¶wie¿anie listy kontaktów po dopisaniu komórki do danych o kontakcie,
   poprawki w obs³udze kontaktów bez numeru gg i komórki (joi)
+* akcja "rozpocznij rozmowê", drobne zmiany/rozbudowa mechanizmów akcji, konfigurowalne
+  toolbary w oknie wyszukiwania, uwaga dosz³y dwa wpisy w zestawie ikony (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
