--- a/ChangeLog
+++ b/ChangeLog
@@ -234,6 +234,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   poprawki w obs³udze kontaktów bez numeru gg i komórki (joi)
 * akcja "rozpocznij rozmowê", drobne zmiany/rozbudowa mechanizmów akcji, konfigurowalne
   toolbary w oknie wyszukiwania, uwaga dosz³y dwa wpisy w zestawie ikony (adrian)
+* poprawki zwi±zane z --enable-final - obs³uga zale¿no¶ci w modu³ach (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
