fixed multiple chat windows opened from SearchDialog
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3674 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -235,6 +235,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * akcja "rozpocznij rozmowê", drobne zmiany/rozbudowa mechanizmów akcji, konfigurowalne
   toolbary w oknie wyszukiwania, uwaga dosz³y dwa wpisy w zestawie ikony (adrian)
 * poprawki zwi±zane z --enable-final - obs³uga zale¿no¶ci w modu³ach (joi)
+* poprawiona mo¿liwo¶æ otworzenia kilku okien rozmowy z poziomu okna przeszukiwania
+  katalogu publicznego (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
