blokowanie przyciskow w toolbarach
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3676 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -237,6 +237,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki zwi±zane z --enable-final - obs³uga zale¿no¶ci w modu³ach (joi)
 * poprawiona mo¿liwo¶æ otworzenia kilku okien rozmowy z poziomu okna przeszukiwania
   katalogu publicznego (joi)
+* opcja blokowania przemieszczania przycisków na paskach narzêdziowych w menu
+  kontekstowym pola dokuj±cego (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
