--- a/ChangeLog
+++ b/ChangeLog
@@ -239,6 +239,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   katalogu publicznego (joi)
 * opcja blokowania przemieszczania przycisków na paskach narzêdziowych w menu
   kontekstowym pola dokuj±cego (adrian)
+* okno zmiany statusu opisowego pojawia siê w okolicach aktualnej pozycji myszki (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
