CXXFLAGS->CFLAGS for C files; fix for (final build && static module && C file)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3688 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -244,6 +244,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * optymalizacje w formatowaniu wiadomo¶ci wy¶wietlanych w chacie/historii/... (joi)
 * je¿eli g³ówne okno jest zminimalizowane i klikniemy lewym przyciskiem w trayu,
   to okno zostanie "odminimalizowane" (joi)
+* poprawki w kompilacji dla kombinacji: --enable-final, statyczny modu³,
+  zawieraj±cy pliki w C (np.: encryption) (joi)
+* u¿ywamy zmiennej CFLAGS, a nie CXXFLAGS do kompilacji plików w C (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
