saving to config file:  size & position of chat windows  encryption state (on/off) new option for contacts: "don't show description" userlist api extension - adding new attributes
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3693 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -248,6 +248,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   zawieraj±cy pliki w C (np.: encryption) (joi)
 * u¿ywamy zmiennej CFLAGS, a nie CXXFLAGS do kompilacji plików w C (joi)
 * poprawione dzia³anie opcji "Poka¿ kontakty, które s± blokowane" po restarcie Kadu (joi)
+* zapisywanie do pliku konfiguracyjnego rozmiarów i pozycji okien rozmowy oraz
+  stanu szyfrowania; opcja "Nie pokazuj opisu" w menu kontekstowym kontaktu;
+  w zwi±zku z powy¿szym: rozszerzenie API userlisty o mo¿liwo¶æ zapisania
+  dowolnych danych razem z kontaktem (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
