--- a/ChangeLog
+++ b/ChangeLog
@@ -252,6 +252,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   stanu szyfrowania; opcja "Nie pokazuj opisu" w menu kontekstowym kontaktu;
   w zwi±zku z powy¿szym: rozszerzenie API userlisty o mo¿liwo¶æ zapisania
   dowolnych danych razem z kontaktem (joi)
+* dodany do autodownloadu modu³ exec_notify (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
