--- a/ChangeLog
+++ b/ChangeLog
@@ -253,6 +253,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w zwi±zku z powy¿szym: rozszerzenie API userlisty o mo¿liwo¶æ zapisania
   dowolnych danych razem z kontaktem (joi)
 * dodany do autodownloadu modu³ exec_notify (joi)
+* mo¿liwo¶æ dodawania nowych zdarzeñ do modu³u notify przez inne modu³y,
+  powiadomienie o tym, ¿e kto¶ chce nam przys³aæ plik (Vogel/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
