--- a/ChangeLog
+++ b/ChangeLog
@@ -258,6 +258,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * argument "handled" w sygna³ach zwi±zanych z klawiatur± w klasie Chat (googie/adrian)
 * dostêp do menu toolbaru z menu przycisku i do menu panelu z menu toolbaru (adrian)
 * poprawka w od¶wie¿aniu chata / historii (po zmianie tekstu w oknie) (joi)
+* dodanie adresów 3 nowych serwerów gg (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
