workaround for Qt bug: space after image/emoticon
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3707 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -259,6 +259,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dostêp do menu toolbaru z menu przycisku i do menu panelu z menu toolbaru (adrian)
 * poprawka w od¶wie¿aniu chata / historii (po zmianie tekstu w oknie) (joi)
 * dodanie adresów 3 nowych serwerów gg (joi)
+* obej¶cie buga w Qt: je¿eli po obrazku/emotikonie jest spacja, to wymu¶my jej pokazanie (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
