hints syntax configuration
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3721 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -271,6 +271,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   pada, a Kadu pozostawa³o niepo³±czone i nie próbowa³o nic z tym zrobiæ... (joi)
 * nowe zdarzenie w module notify: najechanie na kontakt na li¶cie kontaktów
   i odczekanie sekundy - obs³ugiwane w tej chwili przez modu³ hints (joi)
+* konfiguracja sk³adni powy¿szego (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
