--- a/ChangeLog
+++ b/ChangeLog
@@ -272,6 +272,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowe zdarzenie w module notify: najechanie na kontakt na li¶cie kontaktów
   i odczekanie sekundy - obs³ugiwane w tej chwili przez modu³ hints (joi)
 * konfiguracja sk³adni powy¿szego (joi)
+* dodano do autodownloadu ikony glass16 i glass22 usunieto link do starego zestawu (dylemat/Ron_K)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
