Dodane do autodownloadu zestawy glass16 i glass22
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3723 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany do autodownloadu modu³ iwait4u (joi)
 * poprawki w skryptach buduj±cych gdy /bin/sh nie jest linkiem do basha
   (np. w FreeBSD,PLD) (joi)
+* dodane do autodownloadu zestawy ikon glass16 i glass22 (dylemat/Ron_K)
 
 +++ wersja 0.4.3 (30.11.2005)
 * opcja ignorowania formatowania tekstu i obrazków od anonimów, domy¶lnie w³±czona (adrian)
