--- a/ChangeLog
+++ b/ChangeLog
@@ -277,6 +277,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * u¿ywamy fcntl zamiast flock do blokowania profilu (dzia³a na NFSie) (joi)
 * gdy zostawimy otwarte g³ówne okno na innym pulpicie i klikniemy na trayu,
   to Kadu przeniesie na bie¿±cy pulpit (joi)
+* rozwi±zane problemy z dokowaniem: 
+  - GNOME: gdy "obszar powiadamiania" uruchamia siê pó¼niej ni¿ Kadu
+  - GNOME: jednopikselowa ikona (obej¶cie jakiego¶ buga w gnome)
+  - gdy systray pada i zostaje ponownie uruchomiony, Kadu ponownie siê dokuje 
+  (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
