own syntax for every notify module
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3738 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -282,6 +282,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   - GNOME: jednopikselowa ikona (obej¶cie jakiego¶ buga w gnome)
   - gdy systray pada i zostaje ponownie uruchomiony, Kadu ponownie siê dokuje 
   (joi)
+* ka¿dy modu³ powiadamiaj±cy mo¿e sam zdecydowaæ o tym co wy¶wietli
+  po najechaniu myszk± na kontakt (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
