--- a/ChangeLog
+++ b/ChangeLog
@@ -306,6 +306,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿liwo¶æ zaprzeczenia sprawdzania niepusto¶ci napisów w parserze, przyk³ad:
   [opis: %d][!brak opisu%d], do zaprzeczania przy sprawdzaniu istnienia pliku
   mo¿na u¿yæ ! zamiast ~ (joi)
+* nowe sygna³y w klasie UserGroup dotycz±ce zdarzeñ, emitowane po zakoñczeniu
+  zmian + dostosowanie reszty Kadu do tego - ok. 5% prszyspieszenia w czasie
+  uruchamiania+zamykania (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
