checking files in parser fixed
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3766 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -309,6 +309,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowe sygna³y w klasie UserGroup dotycz±ce zdarzeñ, emitowane po zakoñczeniu
   zmian + dostosowanie reszty Kadu do tego - ok. 5% prszyspieszenia w czasie
   uruchamiania+zamykania (joi)
+* poprawka b³êdu wprowadzonego dzieñ wcze¶niej do parsera (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
