refreshing images in KaduTextBrowser
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3769 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -311,6 +311,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   uruchamiania+zamykania (joi)
 * poprawka b³êdu wprowadzonego dzieñ wcze¶niej do parsera (joi)
 * je¿eli sami przestawili¶my status na niedostêpny, to wy³±czamy autoawaya (joi)
+* rozwi±zane (chyba ostatnie) problemy z zanikaniem separatorów w oknie
+  rozmowy i historii (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
